--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.19",
+    "autoprefixer": "^10.4.20",
     "next": "12.1.6",
+    "postcss": "^8.4.41",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
