--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.19",
     "autoprefixer": "^10.4.20",
+    "chart.js": "^4.4.4",
     "next": "12.1.6",
     "postcss": "^8.4.41",
     "react": "18.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.1.0",
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.10"
